Minor design improvements

--- a/pages/projects/projectDetailsTemplate.html
+++ b/pages/projects/projectDetailsTemplate.html
@@ -43,11 +43,11 @@
     <!-- Navigation Bar-->
     <div id="newNavBar">
       <div id="navBarWrapper">
-        <div id="menu">
+        <div id="goBack">
           <button
             id="goBackButton"
             type="button"
-            onclick="window.location.href='../../index.html#projectsSection'"
+            onclick="window.location.href='../../index.html#socialMediaSection'"
           >
             <img
               src="../../assets/images/icons/goBack.svg"
@@ -57,7 +57,7 @@
           </button>
         </div>
 
-        <div id="myName">
+        <div id="myName" style="align-items: center">
           <a class="myName" title="Home" href="../../index.html"> JADNELL </a>
 
           <a class="myName" title="Home" href="../../index.html"> HARESH </a>
@@ -74,26 +74,6 @@
           </button>
         </div>
       </div>
-    </div>
-    <!--Navigation Bar Items-->
-    <div id="navBarItemsLarge">
-      <ul id="navBarItems" class="hide">
-        <li class="navBarItem">
-          <a class="navBarTitles" href="../../index.html#aboutMeSection">
-            ABOUT ME
-          </a>
-        </li>
-        <li class="navBarItem">
-          <a class="navBarTitles" href="../../index.html#projectsSection">
-            PROJECTS
-          </a>
-        </li>
-        <li class="navBarItem">
-          <a class="navBarTitles" href="../../index.html#contactSection">
-            CONTACT
-          </a>
-        </li>
-      </ul>
     </div>
     <!--End Navigation Bar-->
 
