Minor design change to projectDetails description background color

--- a/pages/projects/projectDetailsTemplate.html
+++ b/pages/projects/projectDetailsTemplate.html
@@ -92,7 +92,7 @@
         <!-- Project Description -->
         <div class="projectDetailsTitle">Project Description:</div>
 
-        <div class="smallBlock">
+        <div id="projectDescriptionBlock" class="smallBlock">
           <p class="projectDescription">
             <!-- Description will be added dynamically -->
           </p>
